Add missing files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<script src="jquery-1.11.3.js"></script>
+<script src="jquery.js"></script>
 <script src="jquery.fullPage.min.js"></script>
 <link rel="stylesheet" href="jquery.fullPage.css">
 </head>
