--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div class="section active" id="section0">
 		<h1>ماهي هندسة البرمجيات؟</h1>
 		 <input type="hidden" name="id" value="1" />
-		<p>هي مهنة تهتم بتطوير، وتصميم البرمجيات، عالية الجودة آخذة بعين الاعتبار تخصيصات المستخدم، ومتطلباته على جميع المستويات. تهتم هندسة البرمجيات بتكوين البرنامج منذ مراحله الأولى أثناء تحليل المشكلة، ومن ثم التصميم، وكتابة البرنامج حتى القيام بتجريبه، واختباره، وتنصيبه على الأجهزة، والقيام بعملية صيانته.</p>
+		<p>هي مهنة تهتم بتطوير وتصميم البرمجيات عالية الجودة، آخذة بعين الاعتبار تخصيصات المستخدم ومتطلباته على جميع المستويات. تهتم هندسة البرمجيات بتكوين البرنامج منذ مراحله الأولى أثناء تحليل المشكلة، ومن ثم التصميم وكتابة البرنامج حتى القيام بتجريبه واختباره، إلى أن يتم تنصيبه على الأجهزة والقيام بعملية صيانته.</p>
 		<img src="imgs/Software-Development_2-1.png" alt="fullPage" />
 	</div>
 	<div class="section" id="section1">
