--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 	<div class="section" id="section1">
 		<div class="slide">
 			<div class="intro">
-				<h1>Create Sliders</h1>
-				<p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal sliders in the most simple way ever.</p>
+				<h1>1- تحليل المتطلبات</h1>
+				<p>خلال هذه المرحلة، يقوم الفريق المسؤول عن تطوير البرنامج بتحديد المتطلبات والأهداف التي يريدون الوصول إليها عبر البرنامج. عادةً ما تكون هذه المتطلبات محددة من الزبون، وهنا يجب أن تؤخذ مواضيع الكلفة والجودة بعين الاعتبار.</p>
 				<img src="imgs/slider.png" alt="slider" />
 			</div>
 
@@ -96,22 +96,29 @@
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/1.png" alt="simple" />
-				<h1>Simple</h1>
-				<p>Easy to use. Configurable and customizable.</p>
+				<h1>2- التصميم</h1>
+				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/2.png" alt="Cool" />
-				<h1>Cool</h1>
-				<p>It just looks cool. Impress everybody with a simple and modern web design!</p>
+				<h1>3- التنفيذ</h1>
+				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/3.png" alt="Compatible" />
-				<h1>Compatible</h1>
-				<p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser! Lets give them a chance to see your site in a proper way!</p>
+				<h1>4- الاختبار</h1>
+				<p>في مرحلة الاختبار، يقوم الفريق باختبار برنامجهم والتأكد من أنه يقوم بكافة الوظائف المطلوبة منه، وضمن المعايير والمتطلبات الموضوعة.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/3.png" alt="Compatible" />
+				<h1>5- التطوير</h1>
+				<p>عد انتهاء مرحلة الاختبار، والتأكد من أن البرنامج فعال، ويقوم بالوظيفة المطلوبة منه بأفضل كفاءة وأقل كلفة، يعمل الفريق على البحث عن سبل تطوير البرنامج، وإضافة ميزات جديدةٍ له، وجعله أكثر فاعلية وأكثر كفاءة.</p>
 			</div>
 		</div>
 	</div>
