Phases added in such a way they move from right to left.

--- a/index.html
+++ b/index.html
@@ -87,24 +87,9 @@
 	<div class="section" id="section1">
 		<div class="slide">
 			<div class="intro">
-				<h1>1- تحليل المتطلبات</h1>
-				<p>خلال هذه المرحلة، يقوم الفريق المسؤول عن تطوير البرنامج بتحديد المتطلبات والأهداف التي يريدون الوصول إليها عبر البرنامج. عادةً ما تكون هذه المتطلبات محددة من الزبون، وهنا يجب أن تؤخذ مواضيع الكلفة والجودة بعين الاعتبار.</p>
-				<img src="imgs/slider.png" alt="slider" />
-			</div>
-
-		</div>
-		<div class="slide">
-			<div class="intro">
-				<img src="imgs/1.png" alt="simple" />
-				<h1>2- التصميم</h1>
-				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة.</p>
-			</div>
-		</div>
-		<div class="slide">
-			<div class="intro">
-				<img src="imgs/2.png" alt="Cool" />
-				<h1>3- التنفيذ</h1>
-				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
+				<img src="imgs/3.png" alt="Compatible" />
+				<h1>5- التطوير</h1>
+				<p>عد انتهاء مرحلة الاختبار، والتأكد من أن البرنامج فعال، ويقوم بالوظيفة المطلوبة منه بأفضل كفاءة وأقل كلفة، يعمل الفريق على البحث عن سبل تطوير البرنامج، وإضافة ميزات جديدةٍ له، وجعله أكثر فاعلية وأكثر كفاءة.</p>
 			</div>
 		</div>
 		<div class="slide">
@@ -116,11 +101,26 @@
 		</div>
 		<div class="slide">
 			<div class="intro">
-				<img src="imgs/3.png" alt="Compatible" />
-				<h1>5- التطوير</h1>
-				<p>عد انتهاء مرحلة الاختبار، والتأكد من أن البرنامج فعال، ويقوم بالوظيفة المطلوبة منه بأفضل كفاءة وأقل كلفة، يعمل الفريق على البحث عن سبل تطوير البرنامج، وإضافة ميزات جديدةٍ له، وجعله أكثر فاعلية وأكثر كفاءة.</p>
+				<img src="imgs/2.png" alt="Cool" />
+				<h1>3- التنفيذ</h1>
+				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
 			</div>
 		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/1.png" alt="simple" />
+				<h1>2- التصميم</h1>
+				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة.</p>
+			</div>
+		</div>
+		<div class="slide active">
+			<div class="intro">
+				<h1>1- تحليل المتطلبات</h1>
+				<p>خلال هذه المرحلة، يقوم الفريق المسؤول عن تطوير البرنامج بتحديد المتطلبات والأهداف التي يريدون الوصول إليها عبر البرنامج. عادةً ما تكون هذه المتطلبات محددة من الزبون، وهنا يجب أن تؤخذ مواضيع الكلفة والجودة بعين الاعتبار.</p>
+				<img src="imgs/slider.png" alt="slider" />
+			</div>
+		</div>
+		
 	</div>
 	<div class="section" id="section2">
 		<div class="intro">
