--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<div class="intro">
 				<img src="imgs/1.png" alt="simple" />
 				<h1>2- التصميم</h1>
-				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة.</p>
+				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة. كما أنه يتم وضع الخطوط الأساسية وهيكلة بنية البرنامج.</p>
 			</div>
 		</div>
 		<div class="slide active">
