Images added to phases.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>fullPage.js One Page Scroll Sites</title>
+	<title>هندسة البرمجيات</title>
 	<meta name="author" content="Alvaro Trigo Lopez" />
 	<meta name="description" content="fullPage plugin by Alvaro Trigo. Create fullscreen pages fast and simple. One page scroll like iPhone website." />
 	<meta name="keywords"  content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple" />
@@ -87,37 +87,37 @@
 	<div class="section" id="section1">
 		<div class="slide">
 			<div class="intro">
-				<img src="imgs/3.png" alt="Compatible" />
+				<img src="imgs/evolution.png" alt="Compatible" />
 				<h1>5- التطوير</h1>
 				<p>عد انتهاء مرحلة الاختبار، والتأكد من أن البرنامج فعال، ويقوم بالوظيفة المطلوبة منه بأفضل كفاءة وأقل كلفة، يعمل الفريق على البحث عن سبل تطوير البرنامج، وإضافة ميزات جديدةٍ له، وجعله أكثر فاعلية وأكثر كفاءة.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
-				<img src="imgs/3.png" alt="Compatible" />
+				<img src="imgs/testing.png" alt="Compatible" />
 				<h1>4- الاختبار</h1>
 				<p>في مرحلة الاختبار، يقوم الفريق باختبار برنامجهم والتأكد من أنه يقوم بكافة الوظائف المطلوبة منه، وضمن المعايير والمتطلبات الموضوعة.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
-				<img src="imgs/2.png" alt="Cool" />
+				<img src="imgs/coding-html.png" alt="Cool" />
 				<h1>3- التنفيذ</h1>
 				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
-				<img src="imgs/1.png" alt="simple" />
+				<img src="imgs/design.png" alt="simple" />
 				<h1>2- التصميم</h1>
 				<p>في مرحلة التصميم، يضع الفريق الأفكار المتعلقة بكيفية تصميم البرنامج. هنا يتم النقاش حول ما هي أفضل لغة برمجة أو بيئة برمجة قابلة للاستخدام من أجل تنفيذ البرنامج المطلوب بالمتطلبات المحددة. كما أنه يتم وضع الخطوط الأساسية وهيكلة بنية البرنامج.</p>
 			</div>
 		</div>
 		<div class="slide active">
 			<div class="intro">
+				<img src="imgs/requirements.png" alt="slider" />
 				<h1>1- تحليل المتطلبات</h1>
 				<p>خلال هذه المرحلة، يقوم الفريق المسؤول عن تطوير البرنامج بتحديد المتطلبات والأهداف التي يريدون الوصول إليها عبر البرنامج. عادةً ما تكون هذه المتطلبات محددة من الزبون، وهنا يجب أن تؤخذ مواضيع الكلفة والجودة بعين الاعتبار.</p>
-				<img src="imgs/slider.png" alt="slider" />
 			</div>
 		</div>
 		
