--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<script type="text/javascript" src="examples.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
-			$('#fullpage').fullpage({
+			$('#fullpage').fullpage({		//#4BBFC3	//#7BAABE
 				sectionsColor: ['#4BBFC3', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
 				menu: '#menu',
@@ -123,11 +123,78 @@
 		
 	</div>
 	<div class="section" id="section2">
-		<div class="intro">
-			<h1>Example</h1>
-			<p>HTML markup example to define 4 sections.</p>
-			<img src="imgs/example2.png" alt="example" />
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/coding-html.png" alt="Compatible" />
+				<h1>س9- ما هي الشركات التي تطلب مهندس البرمجيات؟</h1>
+				<p>الشركات الكبيرة مثل ارامكو وسابك و، لكن متطلبات السوق سوف تختلف في السنوات القادمة.</p>
+			</div>
 		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/money.ico" alt="Cool" />
+				<h1>س8- كم مقدار الراتب الذي يستلمه مهندس برمجيات؟</h1>
+				<p>مقدار الراتب ليس ثابت، فالجواب لا أحد يعلم.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/vs.png" alt="Cool" />
+				<h1>س7- ما هو الفرق بين هندسة البرمجيات وعلوم الحاسب؟</h1>
+				<p>.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/game-08.jpg" alt="Cool" />
+				<h1>س6- هل التخصص يهتم ببرمجة الألعاب؟</h1>
+				<p>كإجابة عامة لا، لكن هناك بعض الجامعات توفر مواد تهتم بصناعة الألعاب.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/format-memory.png" alt="Cool" />
+				<h1>س5- هل هندسة البرمجيات تختص بضبط المصنع للاجهزة الالكترونية(فورمات)؟</h1>
+				<p>لا وألف لا، هذا عمل الفني في محلات التصليح، وفرق بين عمل المهندس وعمل الفني، عمل المهندس مختص في مراحل هندسة البرمجيات.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/Job_Board_Icon.png" alt="Cool" />
+				<h1>س4- هل تتوفر وظائف في هذا التخصص؟</h1>
+				<p>نعم اغلب التخصصات فيها وظائف، لكن ما نعرف كم عدد الوظائف المتاحة في الخمس السنوات القادمة.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/Work-env.png" alt="slider" />
+				<h1>س3- ما هي طبيعة العمل كمهندس برمجيات؟</h1>
+				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
+			</div>
+		</div>
+		<div class="slide">
+			<div class="intro">
+				<img src="imgs/design.png" alt="simple" />
+				<h1>س2- ما هي الجامعات التي تُدرّس هذا التخصص؟</h1>
+				<ul>
+  					<li>جامعة الملك فهد للبترول والمعادن</li>
+  					<li>جامعة الملك سعود</li>
+  					<li>يُدرّس في جامعات الخارج</li>
+				</ul>
+			</div>
+		</div>
+		<div class="slide active">
+			<div class="intro">
+				<img src="imgs/requirements.png" alt="slider" />
+				<h1>س1- ما هي تطبيقات التخصص؟</h1>
+				<ul class="">
+  					<li>تطبيقات الويب: تويتر</li>
+  					<li>تطبيقات الانظمة: ويندوز</li>
+  					<li>تطبيقات الجوال: </li>
+				</ul>
+			</div>
+		</div>
+		
 	</div>
 	<div class="section" id="section3">
 		<div class="intro">
