Tadqeeq Imla'i for the content with some modifications.

--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
 			<div class="intro">
 				<img src="imgs/company.png" alt="Compatible" />
 				<h1>س9- ما هي الشركات التي تطلب مهندس البرمجيات؟</h1>
-				<p>الشركات الكبيرة مثل ارامكو وسابك ، ولكن متطلبات السوق سوف تختلف في السنوات القادمة.</p>
+				<p>الشركات الكبيرة مثل أرامكو وسابك وغيرها من شركات القطاع الخاص، ولكن متطلبات السوق قد تختلف في السنوات القادمة.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/money.ico" alt="Cool" />
-				<h1>س8- كم مقدار الراتب الذي يستلمه مهندس برمجيات؟</h1>
-				<p>مقدار الراتب ليس ثابت، فالجواب لا أحد يعلم.</p>
+				<h1>س8- كم مقدار الراتب الذي يستلمه مهندس البرمجيات؟</h1>
+				<p>مقدار الراتب ليس بثابت، فالجواب "لاأحد يعلم".</p>
 			</div>
 		</div>
 		<div class="slide">
@@ -222,57 +222,57 @@
 				<img src="imgs/vs.png" alt="Cool" />
 				<h1>س7- ما هو الفرق بين هندسة البرمجيات وعلوم الحاسب؟</h1>
 				<p>
-يوجد تشابه كبير بين التخصصين مثل انهما بإمكانهما البرمجة وتطوير المواقع وغيرها، ولكن الفرق بينهما ان علوم الحاسب تهتم بإيجاد نظريات جديدة مثل ايجاد خورازميات جديدة اما هندسة البرمجيات تأخذ النظريات من عالم الحاسب وتطبقها على ارض الواقع بإحترافية وبشكل منظم.</p>
+يوجد تشابه كبير بين التخصصين، مثل أنهما بإمكانهما البرمجة وتطوير المواقع وغيرها، ولكن الفرق بينهما أن علوم الحاسب تهتم بإيجاد نظريات جديدة، كايجاد خورازميات جديدة، أما هندسة البرمجيات فتأخذ النظريات من علوم الحاسب لتطبقها على أرض الواقع باحترافية وشكل منظم.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/game-08.jpg" alt="Cool" />
 				<h1>س6- هل التخصص يهتم ببرمجة الألعاب؟</h1>
-				<p>كإجابة عامة لا، لكن هناك بعض الجامعات توفر مواد تهتم بصناعة الألعاب.</p>
+				<p>برمجة الألعاب هي أحد المجالات التي قد يعمل بها مهندس البرمجيات، لكنه ليس العنصر الأساسي من التخصص، وهناك بعض الجامعات التي توفر مواداً تهتم بصناعة الألعاب.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/format-memory.png" alt="Cool" />
-				<h1>س5- هل هندسة البرمجيات تختص بضبط المصنع للاجهزة؟</h1>
-				<p>لا وألف لا، هذا عمل الفني في محلات التصليح، وفرق بين عمل المهندس وعمل الفني، عمل المهندس مختص في مراحل هندسة البرمجيات.</p>
+				<h1>س5- هل هندسة البرمجيات تختص بضبط المصنع للأجهزة (فورمات)؟</h1>
+				<p>لا وألف لا، هذا عمل الفني في محلات التصليح، وفرقٌ بين عمل المهندس وعمل الفني، عمل المهندس مختص في مراحل هندسة البرمجيات.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/Job_Board_Icon.png" alt="Cool" />
-				<h1>س4- هل تتوفر وظائف في هذا التخصص؟</h1>
-				<p>نعم اغلب التخصصات فيها وظائف، لكن لا نعلم عدد الوظائف المتاحة في الخمس السنوات القادمة.</p>
+				<h1>س4- هل تتوفر وظائفٌ في هذا التخصص؟</h1>
+				<p>نعم، أغلب التخصصات يتوفر لها وظائف، لكن لانعلم عدد الوظائف المتاحة في الخمس سنواتٍ القادمة.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/Work-env.png" alt="slider" />
-				<h1>س3- ما هي طبيعة عمل مهندس البرمجيات؟</h1>
+				<h1>س3- ماهي طبيعة عمل مهندس البرمجيات؟</h1>
 				<p>بعد تحديد المتطلبات والأهداف والاتفاق على لغة البرمجة ووضع الخطوط الأساسية للبرنامج وبنيته، يقوم الفريق بتنفيذ البرنامج.</p>
 			</div>
 		</div>
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/graduationcap.png" alt="simple" />
-				<h1>س2- ما هي الجامعات التي تُدرّس هذا التخصص؟</h1>
+				<h1>س2- ماهي الجامعات التي يُدرَّس هذا التخصص؟</h1>
 				<ul>
-					<li>من أشهر الجامعات التي تُدرّس هندسة البرمجيات:</li>
+					<li>من أشهر الجامعات التي تُدرِّس هندسة البرمجيات:</li>
   					<li>جامعة الملك فهد للبترول والمعادن</li>
   					<li>جامعة الملك سعود</li>
-  					<li>وايضاً يُدرّس في جامعات الخارج</li>
+  					<li>وأيضاً يُدرَّس في جامعات الخارج</li>
 				</ul>
 			</div>
 		</div>
 		<div class="slide active">
 			<div class="intro">
 				<img src="imgs/twitter.png" alt="slider" />
-				<h1>س1- ما هي تطبيقات هندسة البرمجيات؟</h1>
+				<h1>س1- ماهي تطبيقات هندسة البرمجيات؟</h1>
 				<ul>
-					<li>تطبيقات هندسة البرمجيات كثيرة، والتالي امثلة على هذه التطبيقات:-</li>
+					<li>تطبيقات هندسة البرمجيات كثيرة، والتالي أمثلة على هذه التطبيقات:-</li>
   					<li>تطبيقات الويب: تويتر</li>
-  					<li>تطبيقات الانظمة: ويندوز</li>
+  					<li>تطبيقات الأنظمة: ويندوز</li>
   					<li>تطبيقات سطح المكتب: مايكروسوفت أوفيس</li>
 				</ul>
 			</div>
