correct some words

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			<div class="intro">
 				<img src="imgs/money.ico" alt="Cool" />
 				<h1>س8- كم مقدار الراتب الذي يستلمه مهندس البرمجيات؟</h1>
-				<p>مقدار الراتب ليس بثابت، فالجواب "لاأحد يعلم".</p>
+				<p>مقدار الراتب ليس بثابت، فالجواب "لا أحد يعلم".</p>
 			</div>
 		</div>
 		<div class="slide">
@@ -256,7 +256,7 @@
 		<div class="slide">
 			<div class="intro">
 				<img src="imgs/graduationcap.png" alt="simple" />
-				<h1>س2- ماهي الجامعات التي يُدرَّس هذا التخصص؟</h1>
+				<h1>س2- ماهي الجامعات التي تُدرَّس هذا التخصص؟</h1>
 				<ul>
 					<li>من أشهر الجامعات التي تُدرِّس هندسة البرمجيات:</li>
   					<li>جامعة الملك فهد للبترول والمعادن</li>
