--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			var numberOfSeconds = 20;
 
 		    //Applying auto animation (comment this to disable auto animation)
-			var autoAnimation = setInterval(animation, numberOfSeconds * 1000);
+			//var autoAnimation = setInterval(animation, numberOfSeconds * 1000);
 			
 
 		});
